Nueva carpeta (2)/ProjectAutomatas/YAC.output
Terminals unused in grammar

   CLASS
   STRUCT
   LLAVEIZ
   LLAVEDER


Rules useless in parser due to conflicts

    9 INICIOS: /* empty */


State 0 conflicts: 13 shift/reduce, 1 reduce/reduce
State 15 conflicts: 13 shift/reduce, 1 reduce/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: /* empty */
    2  | INICIOS S

    3 INICIOS: FUNCIONES
    4        | IFYCICLO
    5        | DECLARACION
    6        | ASIGNACION
    7        | LIBS
    8        | error PUNTOCOMA
    9        | /* empty */

   10 VARIABLE: INT
   11         | DOUBLE
   12         | FLOAT
   13         | STRING
   14         | CHAR
   15         | VOID
   16         | BOOLEAN

   17 LIBS: GATO INCLUDE MENORQUE ID MAYORQUE
   18     | GATO INCLUDE CADENA

   19 FUNCIONES: VARIABLE ID PARENTESISIZ PARENTESISDER
   20          | VARIABLE ID PARENTESISIZ VARIABLE ID PARAMETROS PARENTESISDER
   21          | ID PARENTESISIZ ID PARAMETROS PARENTESISDER PUNTOCOMA
   22          | ID PARENTESISIZ PARENTESISDER PUNTOCOMA

   23 DECLARACION: VARIABLE BRACKETIZ BRACKETDER ID VAR PUNTOCOMA
   24            | VARIABLE ID VAR PUNTOCOMA
   25            | VARIABLE ASIGNACION

   26 ASIGNACION: ID IGUAL ENTERO PUNTOCOMA
   27           | ID IGUAL EXPARIT PUNTOCOMA
   28           | ID IGUAL DECIMAL PUNTOCOMA
   29           | ID IGUAL CADENA PUNTOCOMA
   30           | ID IGUAL CARACTER PUNTOCOMA
   31           | ID IGUAL BOOL PUNTOCOMA

   32 BOOL: TRUE
   33     | FALSE

   34 PARAMETROS: /* empty */
   35           | COMA VARIABLE ID PARAMETROS
   36           | COMA ID PARAMETROS

   37 VAR: /* empty */
   38    | COMA ID VAR

   39 OPERACION: MAS
   40          | MENOS
   41          | ASTERISCO
   42          | DIAGONAL
   43          | PORCENTAJE

   44 EXPARIT: NUMERO OPERACION EXPARIT
   45        | ID OPERACION EXPARIT
   46        | ID
   47        | NUMERO

   48 NUMERO: /* empty */
   49       | ENTERO
   50       | DECIMAL

   51 CONDICIONES: MAYORQUE
   52            | MENORQUE
   53            | IGUALDAD
   54            | DIFERENTEDE
   55            | MAYORQUE IGUAL
   56            | MENORQUE IGUAL

   57 OPERADORBOOL: AND
   58             | OR

   59 CONDAUX: /* empty */
   60        | OPERADORBOOL CONDICION

   61 CONDICION: ID CONDICIONES NUMERO CONDAUX
   62          | ID CONDICIONES ID CONDAUX
   63          | NUMERO CONDICIONES NUMERO CONDAUX
   64          | NUMERO CONDICIONES ID CONDAUX
   65          | ID CONDAUX
   66          | EXCLAMACION ID CONDAUX

   67 IFYCICLO: IF PARENTESISIZ CONDICION PARENTESISDER
   68         | WHILE PARENTESISIZ CONDICION PARENTESISDER
   69         | FOR PARENTESISIZ INT ID IGUAL ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER


Terminals, with rules where they appear

$end (0) 0
error (256) 8
INT (258) 10 69
DOUBLE (259) 11
FLOAT (260) 12
STRING (261) 13
VOID (262) 15
BOOLEAN (263) 16
CHAR (264) 14
CLASS (265)
STRUCT (266)
FOR (267) 69
WHILE (268) 68
IF (269) 67
TRUE (270) 32
FALSE (271) 33
ID (272) 17 19 20 21 22 23 24 26 27 28 29 30 31 35 36 38 45 46 61 62
    64 65 66 69
ENTERO (273) 26 49 69
DECIMAL (274) 28 50
CADENA (275) 18 29
CARACTER (276) 30
PARENTESISIZ (277) 19 20 21 22 67 68 69
PARENTESISDER (278) 19 20 21 22 67 68 69
LLAVEIZ (279)
LLAVEDER (280)
BRACKETIZ (281) 23
BRACKETDER (282) 23
COMA (283) 35 36 38
PUNTOCOMA (284) 8 21 22 23 24 26 27 28 29 30 31 69
IGUAL (285) 26 27 28 29 30 31 55 56 69
ASTERISCO (286) 41
DIAGONAL (287) 42
MAS (288) 39 69
MENOS (289) 40
PORCENTAJE (290) 43
EXCLAMACION (291) 66
IGUALDAD (292) 53
DIFERENTEDE (293) 54
MAYORQUE (294) 17 51 55
MENORQUE (295) 17 52 56
AND (296) 57
OR (297) 58
INCLUDE (298) 17 18
GATO (299) 17 18


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
S (46)
    on left: 1 2, on right: 0 2
INICIOS (47)
    on left: 3 4 5 6 7 8 9, on right: 2
VARIABLE (48)
    on left: 10 11 12 13 14 15 16, on right: 19 20 23 24 25 35
LIBS (49)
    on left: 17 18, on right: 7
FUNCIONES (50)
    on left: 19 20 21 22, on right: 3
DECLARACION (51)
    on left: 23 24 25, on right: 5
ASIGNACION (52)
    on left: 26 27 28 29 30 31, on right: 6 25
BOOL (53)
    on left: 32 33, on right: 31
PARAMETROS (54)
    on left: 34 35 36, on right: 20 21 35 36
VAR (55)
    on left: 37 38, on right: 23 24 38
OPERACION (56)
    on left: 39 40 41 42 43, on right: 44 45
EXPARIT (57)
    on left: 44 45 46 47, on right: 27 44 45
NUMERO (58)
    on left: 48 49 50, on right: 44 47 61 63 64
CONDICIONES (59)
    on left: 51 52 53 54 55 56, on right: 61 62 63 64
OPERADORBOOL (60)
    on left: 57 58, on right: 60
CONDAUX (61)
    on left: 59 60, on right: 61 62 63 64 65 66
CONDICION (62)
    on left: 61 62 63 64 65 66, on right: 60 67 68 69
IFYCICLO (63)
    on left: 67 68 69, on right: 4


State 0

    0 $accept: . S $end

    error    shift, and go to state 1
    INT      shift, and go to state 2
    DOUBLE   shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    VOID     shift, and go to state 6
    BOOLEAN  shift, and go to state 7
    CHAR     shift, and go to state 8
    FOR      shift, and go to state 9
    WHILE    shift, and go to state 10
    IF       shift, and go to state 11
    ID       shift, and go to state 12
    GATO     shift, and go to state 13

    $end     reduce using rule 1 (S)
    $end     [reduce using rule 9 (INICIOS)]
    error    [reduce using rule 9 (INICIOS)]
    INT      [reduce using rule 9 (INICIOS)]
    DOUBLE   [reduce using rule 9 (INICIOS)]
    FLOAT    [reduce using rule 9 (INICIOS)]
    STRING   [reduce using rule 9 (INICIOS)]
    VOID     [reduce using rule 9 (INICIOS)]
    BOOLEAN  [reduce using rule 9 (INICIOS)]
    CHAR     [reduce using rule 9 (INICIOS)]
    FOR      [reduce using rule 9 (INICIOS)]
    WHILE    [reduce using rule 9 (INICIOS)]
    IF       [reduce using rule 9 (INICIOS)]
    ID       [reduce using rule 9 (INICIOS)]
    GATO     [reduce using rule 9 (INICIOS)]

    S            go to state 14
    INICIOS      go to state 15
    VARIABLE     go to state 16
    LIBS         go to state 17
    FUNCIONES    go to state 18
    DECLARACION  go to state 19
    ASIGNACION   go to state 20
    IFYCICLO     go to state 21


State 1

    8 INICIOS: error . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 22


State 2

   10 VARIABLE: INT .

    $default  reduce using rule 10 (VARIABLE)


State 3

   11 VARIABLE: DOUBLE .

    $default  reduce using rule 11 (VARIABLE)


State 4

   12 VARIABLE: FLOAT .

    $default  reduce using rule 12 (VARIABLE)


State 5

   13 VARIABLE: STRING .

    $default  reduce using rule 13 (VARIABLE)


State 6

   15 VARIABLE: VOID .

    $default  reduce using rule 15 (VARIABLE)


State 7

   16 VARIABLE: BOOLEAN .

    $default  reduce using rule 16 (VARIABLE)


State 8

   14 VARIABLE: CHAR .

    $default  reduce using rule 14 (VARIABLE)


State 9

   69 IFYCICLO: FOR . PARENTESISIZ INT ID IGUAL ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    PARENTESISIZ  shift, and go to state 23


State 10

   68 IFYCICLO: WHILE . PARENTESISIZ CONDICION PARENTESISDER

    PARENTESISIZ  shift, and go to state 24


State 11

   67 IFYCICLO: IF . PARENTESISIZ CONDICION PARENTESISDER

    PARENTESISIZ  shift, and go to state 25


State 12

   21 FUNCIONES: ID . PARENTESISIZ ID PARAMETROS PARENTESISDER PUNTOCOMA
   22          | ID . PARENTESISIZ PARENTESISDER PUNTOCOMA
   26 ASIGNACION: ID . IGUAL ENTERO PUNTOCOMA
   27           | ID . IGUAL EXPARIT PUNTOCOMA
   28           | ID . IGUAL DECIMAL PUNTOCOMA
   29           | ID . IGUAL CADENA PUNTOCOMA
   30           | ID . IGUAL CARACTER PUNTOCOMA
   31           | ID . IGUAL BOOL PUNTOCOMA

    PARENTESISIZ  shift, and go to state 26
    IGUAL         shift, and go to state 27


State 13

   17 LIBS: GATO . INCLUDE MENORQUE ID MAYORQUE
   18     | GATO . INCLUDE CADENA

    INCLUDE  shift, and go to state 28


State 14

    0 $accept: S . $end

    $end  shift, and go to state 29


State 15

    2 S: INICIOS . S

    error    shift, and go to state 1
    INT      shift, and go to state 2
    DOUBLE   shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    VOID     shift, and go to state 6
    BOOLEAN  shift, and go to state 7
    CHAR     shift, and go to state 8
    FOR      shift, and go to state 9
    WHILE    shift, and go to state 10
    IF       shift, and go to state 11
    ID       shift, and go to state 12
    GATO     shift, and go to state 13

    $end     reduce using rule 1 (S)
    $end     [reduce using rule 9 (INICIOS)]
    error    [reduce using rule 9 (INICIOS)]
    INT      [reduce using rule 9 (INICIOS)]
    DOUBLE   [reduce using rule 9 (INICIOS)]
    FLOAT    [reduce using rule 9 (INICIOS)]
    STRING   [reduce using rule 9 (INICIOS)]
    VOID     [reduce using rule 9 (INICIOS)]
    BOOLEAN  [reduce using rule 9 (INICIOS)]
    CHAR     [reduce using rule 9 (INICIOS)]
    FOR      [reduce using rule 9 (INICIOS)]
    WHILE    [reduce using rule 9 (INICIOS)]
    IF       [reduce using rule 9 (INICIOS)]
    ID       [reduce using rule 9 (INICIOS)]
    GATO     [reduce using rule 9 (INICIOS)]

    S            go to state 30
    INICIOS      go to state 15
    VARIABLE     go to state 16
    LIBS         go to state 17
    FUNCIONES    go to state 18
    DECLARACION  go to state 19
    ASIGNACION   go to state 20
    IFYCICLO     go to state 21


State 16

   19 FUNCIONES: VARIABLE . ID PARENTESISIZ PARENTESISDER
   20          | VARIABLE . ID PARENTESISIZ VARIABLE ID PARAMETROS PARENTESISDER
   23 DECLARACION: VARIABLE . BRACKETIZ BRACKETDER ID VAR PUNTOCOMA
   24            | VARIABLE . ID VAR PUNTOCOMA
   25            | VARIABLE . ASIGNACION

    ID         shift, and go to state 31
    BRACKETIZ  shift, and go to state 32

    ASIGNACION  go to state 33


State 17

    7 INICIOS: LIBS .

    $default  reduce using rule 7 (INICIOS)


State 18

    3 INICIOS: FUNCIONES .

    $default  reduce using rule 3 (INICIOS)


State 19

    5 INICIOS: DECLARACION .

    $default  reduce using rule 5 (INICIOS)


State 20

    6 INICIOS: ASIGNACION .

    $default  reduce using rule 6 (INICIOS)


State 21

    4 INICIOS: IFYCICLO .

    $default  reduce using rule 4 (INICIOS)


State 22

    8 INICIOS: error PUNTOCOMA .

    $default  reduce using rule 8 (INICIOS)


State 23

   69 IFYCICLO: FOR PARENTESISIZ . INT ID IGUAL ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    INT  shift, and go to state 34


State 24

   68 IFYCICLO: WHILE PARENTESISIZ . CONDICION PARENTESISDER

    ID           shift, and go to state 35
    ENTERO       shift, and go to state 36
    DECIMAL      shift, and go to state 37
    EXCLAMACION  shift, and go to state 38

    $default  reduce using rule 48 (NUMERO)

    NUMERO     go to state 39
    CONDICION  go to state 40


State 25

   67 IFYCICLO: IF PARENTESISIZ . CONDICION PARENTESISDER

    ID           shift, and go to state 35
    ENTERO       shift, and go to state 36
    DECIMAL      shift, and go to state 37
    EXCLAMACION  shift, and go to state 38

    $default  reduce using rule 48 (NUMERO)

    NUMERO     go to state 39
    CONDICION  go to state 41


State 26

   21 FUNCIONES: ID PARENTESISIZ . ID PARAMETROS PARENTESISDER PUNTOCOMA
   22          | ID PARENTESISIZ . PARENTESISDER PUNTOCOMA

    ID             shift, and go to state 42
    PARENTESISDER  shift, and go to state 43


State 27

   26 ASIGNACION: ID IGUAL . ENTERO PUNTOCOMA
   27           | ID IGUAL . EXPARIT PUNTOCOMA
   28           | ID IGUAL . DECIMAL PUNTOCOMA
   29           | ID IGUAL . CADENA PUNTOCOMA
   30           | ID IGUAL . CARACTER PUNTOCOMA
   31           | ID IGUAL . BOOL PUNTOCOMA

    TRUE      shift, and go to state 44
    FALSE     shift, and go to state 45
    ID        shift, and go to state 46
    ENTERO    shift, and go to state 47
    DECIMAL   shift, and go to state 48
    CADENA    shift, and go to state 49
    CARACTER  shift, and go to state 50

    $default  reduce using rule 48 (NUMERO)

    BOOL     go to state 51
    EXPARIT  go to state 52
    NUMERO   go to state 53


State 28

   17 LIBS: GATO INCLUDE . MENORQUE ID MAYORQUE
   18     | GATO INCLUDE . CADENA

    CADENA    shift, and go to state 54
    MENORQUE  shift, and go to state 55


State 29

    0 $accept: S $end .

    $default  accept


State 30

    2 S: INICIOS S .

    $default  reduce using rule 2 (S)


State 31

   19 FUNCIONES: VARIABLE ID . PARENTESISIZ PARENTESISDER
   20          | VARIABLE ID . PARENTESISIZ VARIABLE ID PARAMETROS PARENTESISDER
   24 DECLARACION: VARIABLE ID . VAR PUNTOCOMA
   26 ASIGNACION: ID . IGUAL ENTERO PUNTOCOMA
   27           | ID . IGUAL EXPARIT PUNTOCOMA
   28           | ID . IGUAL DECIMAL PUNTOCOMA
   29           | ID . IGUAL CADENA PUNTOCOMA
   30           | ID . IGUAL CARACTER PUNTOCOMA
   31           | ID . IGUAL BOOL PUNTOCOMA

    PARENTESISIZ  shift, and go to state 56
    COMA          shift, and go to state 57
    IGUAL         shift, and go to state 27

    $default  reduce using rule 37 (VAR)

    VAR  go to state 58


State 32

   23 DECLARACION: VARIABLE BRACKETIZ . BRACKETDER ID VAR PUNTOCOMA

    BRACKETDER  shift, and go to state 59


State 33

   25 DECLARACION: VARIABLE ASIGNACION .

    $default  reduce using rule 25 (DECLARACION)


State 34

   69 IFYCICLO: FOR PARENTESISIZ INT . ID IGUAL ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    ID  shift, and go to state 60


State 35

   61 CONDICION: ID . CONDICIONES NUMERO CONDAUX
   62          | ID . CONDICIONES ID CONDAUX
   65          | ID . CONDAUX

    IGUALDAD     shift, and go to state 61
    DIFERENTEDE  shift, and go to state 62
    MAYORQUE     shift, and go to state 63
    MENORQUE     shift, and go to state 64
    AND          shift, and go to state 65
    OR           shift, and go to state 66

    $default  reduce using rule 59 (CONDAUX)

    CONDICIONES   go to state 67
    OPERADORBOOL  go to state 68
    CONDAUX       go to state 69


State 36

   49 NUMERO: ENTERO .

    $default  reduce using rule 49 (NUMERO)


State 37

   50 NUMERO: DECIMAL .

    $default  reduce using rule 50 (NUMERO)


State 38

   66 CONDICION: EXCLAMACION . ID CONDAUX

    ID  shift, and go to state 70


State 39

   63 CONDICION: NUMERO . CONDICIONES NUMERO CONDAUX
   64          | NUMERO . CONDICIONES ID CONDAUX

    IGUALDAD     shift, and go to state 61
    DIFERENTEDE  shift, and go to state 62
    MAYORQUE     shift, and go to state 63
    MENORQUE     shift, and go to state 64

    CONDICIONES  go to state 71


State 40

   68 IFYCICLO: WHILE PARENTESISIZ CONDICION . PARENTESISDER

    PARENTESISDER  shift, and go to state 72


State 41

   67 IFYCICLO: IF PARENTESISIZ CONDICION . PARENTESISDER

    PARENTESISDER  shift, and go to state 73


State 42

   21 FUNCIONES: ID PARENTESISIZ ID . PARAMETROS PARENTESISDER PUNTOCOMA

    COMA  shift, and go to state 74

    $default  reduce using rule 34 (PARAMETROS)

    PARAMETROS  go to state 75


State 43

   22 FUNCIONES: ID PARENTESISIZ PARENTESISDER . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 76


State 44

   32 BOOL: TRUE .

    $default  reduce using rule 32 (BOOL)


State 45

   33 BOOL: FALSE .

    $default  reduce using rule 33 (BOOL)


State 46

   45 EXPARIT: ID . OPERACION EXPARIT
   46        | ID .

    ASTERISCO   shift, and go to state 77
    DIAGONAL    shift, and go to state 78
    MAS         shift, and go to state 79
    MENOS       shift, and go to state 80
    PORCENTAJE  shift, and go to state 81

    $default  reduce using rule 46 (EXPARIT)

    OPERACION  go to state 82


State 47

   26 ASIGNACION: ID IGUAL ENTERO . PUNTOCOMA
   49 NUMERO: ENTERO .

    PUNTOCOMA  shift, and go to state 83

    PUNTOCOMA  [reduce using rule 49 (NUMERO)]
    $default   reduce using rule 49 (NUMERO)


State 48

   28 ASIGNACION: ID IGUAL DECIMAL . PUNTOCOMA
   50 NUMERO: DECIMAL .

    PUNTOCOMA  shift, and go to state 84

    PUNTOCOMA  [reduce using rule 50 (NUMERO)]
    $default   reduce using rule 50 (NUMERO)


State 49

   29 ASIGNACION: ID IGUAL CADENA . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 85


State 50

   30 ASIGNACION: ID IGUAL CARACTER . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 86


State 51

   31 ASIGNACION: ID IGUAL BOOL . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 87


State 52

   27 ASIGNACION: ID IGUAL EXPARIT . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 88


State 53

   44 EXPARIT: NUMERO . OPERACION EXPARIT
   47        | NUMERO .

    ASTERISCO   shift, and go to state 77
    DIAGONAL    shift, and go to state 78
    MAS         shift, and go to state 79
    MENOS       shift, and go to state 80
    PORCENTAJE  shift, and go to state 81

    $default  reduce using rule 47 (EXPARIT)

    OPERACION  go to state 89


State 54

   18 LIBS: GATO INCLUDE CADENA .

    $default  reduce using rule 18 (LIBS)


State 55

   17 LIBS: GATO INCLUDE MENORQUE . ID MAYORQUE

    ID  shift, and go to state 90


State 56

   19 FUNCIONES: VARIABLE ID PARENTESISIZ . PARENTESISDER
   20          | VARIABLE ID PARENTESISIZ . VARIABLE ID PARAMETROS PARENTESISDER

    INT            shift, and go to state 2
    DOUBLE         shift, and go to state 3
    FLOAT          shift, and go to state 4
    STRING         shift, and go to state 5
    VOID           shift, and go to state 6
    BOOLEAN        shift, and go to state 7
    CHAR           shift, and go to state 8
    PARENTESISDER  shift, and go to state 91

    VARIABLE  go to state 92


State 57

   38 VAR: COMA . ID VAR

    ID  shift, and go to state 93


State 58

   24 DECLARACION: VARIABLE ID VAR . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 94


State 59

   23 DECLARACION: VARIABLE BRACKETIZ BRACKETDER . ID VAR PUNTOCOMA

    ID  shift, and go to state 95


State 60

   69 IFYCICLO: FOR PARENTESISIZ INT ID . IGUAL ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    IGUAL  shift, and go to state 96


State 61

   53 CONDICIONES: IGUALDAD .

    $default  reduce using rule 53 (CONDICIONES)


State 62

   54 CONDICIONES: DIFERENTEDE .

    $default  reduce using rule 54 (CONDICIONES)


State 63

   51 CONDICIONES: MAYORQUE .
   55            | MAYORQUE . IGUAL

    IGUAL  shift, and go to state 97

    $default  reduce using rule 51 (CONDICIONES)


State 64

   52 CONDICIONES: MENORQUE .
   56            | MENORQUE . IGUAL

    IGUAL  shift, and go to state 98

    $default  reduce using rule 52 (CONDICIONES)


State 65

   57 OPERADORBOOL: AND .

    $default  reduce using rule 57 (OPERADORBOOL)


State 66

   58 OPERADORBOOL: OR .

    $default  reduce using rule 58 (OPERADORBOOL)


State 67

   61 CONDICION: ID CONDICIONES . NUMERO CONDAUX
   62          | ID CONDICIONES . ID CONDAUX

    ID       shift, and go to state 99
    ENTERO   shift, and go to state 36
    DECIMAL  shift, and go to state 37

    $default  reduce using rule 48 (NUMERO)

    NUMERO  go to state 100


State 68

   60 CONDAUX: OPERADORBOOL . CONDICION

    ID           shift, and go to state 35
    ENTERO       shift, and go to state 36
    DECIMAL      shift, and go to state 37
    EXCLAMACION  shift, and go to state 38

    $default  reduce using rule 48 (NUMERO)

    NUMERO     go to state 39
    CONDICION  go to state 101


State 69

   65 CONDICION: ID CONDAUX .

    $default  reduce using rule 65 (CONDICION)


State 70

   66 CONDICION: EXCLAMACION ID . CONDAUX

    AND  shift, and go to state 65
    OR   shift, and go to state 66

    $default  reduce using rule 59 (CONDAUX)

    OPERADORBOOL  go to state 68
    CONDAUX       go to state 102


State 71

   63 CONDICION: NUMERO CONDICIONES . NUMERO CONDAUX
   64          | NUMERO CONDICIONES . ID CONDAUX

    ID       shift, and go to state 103
    ENTERO   shift, and go to state 36
    DECIMAL  shift, and go to state 37

    $default  reduce using rule 48 (NUMERO)

    NUMERO  go to state 104


State 72

   68 IFYCICLO: WHILE PARENTESISIZ CONDICION PARENTESISDER .

    $default  reduce using rule 68 (IFYCICLO)


State 73

   67 IFYCICLO: IF PARENTESISIZ CONDICION PARENTESISDER .

    $default  reduce using rule 67 (IFYCICLO)


State 74

   35 PARAMETROS: COMA . VARIABLE ID PARAMETROS
   36           | COMA . ID PARAMETROS

    INT      shift, and go to state 2
    DOUBLE   shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    VOID     shift, and go to state 6
    BOOLEAN  shift, and go to state 7
    CHAR     shift, and go to state 8
    ID       shift, and go to state 105

    VARIABLE  go to state 106


State 75

   21 FUNCIONES: ID PARENTESISIZ ID PARAMETROS . PARENTESISDER PUNTOCOMA

    PARENTESISDER  shift, and go to state 107


State 76

   22 FUNCIONES: ID PARENTESISIZ PARENTESISDER PUNTOCOMA .

    $default  reduce using rule 22 (FUNCIONES)


State 77

   41 OPERACION: ASTERISCO .

    $default  reduce using rule 41 (OPERACION)


State 78

   42 OPERACION: DIAGONAL .

    $default  reduce using rule 42 (OPERACION)


State 79

   39 OPERACION: MAS .

    $default  reduce using rule 39 (OPERACION)


State 80

   40 OPERACION: MENOS .

    $default  reduce using rule 40 (OPERACION)


State 81

   43 OPERACION: PORCENTAJE .

    $default  reduce using rule 43 (OPERACION)


State 82

   45 EXPARIT: ID OPERACION . EXPARIT

    ID       shift, and go to state 46
    ENTERO   shift, and go to state 36
    DECIMAL  shift, and go to state 37

    $default  reduce using rule 48 (NUMERO)

    EXPARIT  go to state 108
    NUMERO   go to state 53


State 83

   26 ASIGNACION: ID IGUAL ENTERO PUNTOCOMA .

    $default  reduce using rule 26 (ASIGNACION)


State 84

   28 ASIGNACION: ID IGUAL DECIMAL PUNTOCOMA .

    $default  reduce using rule 28 (ASIGNACION)


State 85

   29 ASIGNACION: ID IGUAL CADENA PUNTOCOMA .

    $default  reduce using rule 29 (ASIGNACION)


State 86

   30 ASIGNACION: ID IGUAL CARACTER PUNTOCOMA .

    $default  reduce using rule 30 (ASIGNACION)


State 87

   31 ASIGNACION: ID IGUAL BOOL PUNTOCOMA .

    $default  reduce using rule 31 (ASIGNACION)


State 88

   27 ASIGNACION: ID IGUAL EXPARIT PUNTOCOMA .

    $default  reduce using rule 27 (ASIGNACION)


State 89

   44 EXPARIT: NUMERO OPERACION . EXPARIT

    ID       shift, and go to state 46
    ENTERO   shift, and go to state 36
    DECIMAL  shift, and go to state 37

    $default  reduce using rule 48 (NUMERO)

    EXPARIT  go to state 109
    NUMERO   go to state 53


State 90

   17 LIBS: GATO INCLUDE MENORQUE ID . MAYORQUE

    MAYORQUE  shift, and go to state 110


State 91

   19 FUNCIONES: VARIABLE ID PARENTESISIZ PARENTESISDER .

    $default  reduce using rule 19 (FUNCIONES)


State 92

   20 FUNCIONES: VARIABLE ID PARENTESISIZ VARIABLE . ID PARAMETROS PARENTESISDER

    ID  shift, and go to state 111


State 93

   38 VAR: COMA ID . VAR

    COMA  shift, and go to state 57

    $default  reduce using rule 37 (VAR)

    VAR  go to state 112


State 94

   24 DECLARACION: VARIABLE ID VAR PUNTOCOMA .

    $default  reduce using rule 24 (DECLARACION)


State 95

   23 DECLARACION: VARIABLE BRACKETIZ BRACKETDER ID . VAR PUNTOCOMA

    COMA  shift, and go to state 57

    $default  reduce using rule 37 (VAR)

    VAR  go to state 113


State 96

   69 IFYCICLO: FOR PARENTESISIZ INT ID IGUAL . ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    ENTERO  shift, and go to state 114


State 97

   55 CONDICIONES: MAYORQUE IGUAL .

    $default  reduce using rule 55 (CONDICIONES)


State 98

   56 CONDICIONES: MENORQUE IGUAL .

    $default  reduce using rule 56 (CONDICIONES)


State 99

   62 CONDICION: ID CONDICIONES ID . CONDAUX

    AND  shift, and go to state 65
    OR   shift, and go to state 66

    $default  reduce using rule 59 (CONDAUX)

    OPERADORBOOL  go to state 68
    CONDAUX       go to state 115


State 100

   61 CONDICION: ID CONDICIONES NUMERO . CONDAUX

    AND  shift, and go to state 65
    OR   shift, and go to state 66

    $default  reduce using rule 59 (CONDAUX)

    OPERADORBOOL  go to state 68
    CONDAUX       go to state 116


State 101

   60 CONDAUX: OPERADORBOOL CONDICION .

    $default  reduce using rule 60 (CONDAUX)


State 102

   66 CONDICION: EXCLAMACION ID CONDAUX .

    $default  reduce using rule 66 (CONDICION)


State 103

   64 CONDICION: NUMERO CONDICIONES ID . CONDAUX

    AND  shift, and go to state 65
    OR   shift, and go to state 66

    $default  reduce using rule 59 (CONDAUX)

    OPERADORBOOL  go to state 68
    CONDAUX       go to state 117


State 104

   63 CONDICION: NUMERO CONDICIONES NUMERO . CONDAUX

    AND  shift, and go to state 65
    OR   shift, and go to state 66

    $default  reduce using rule 59 (CONDAUX)

    OPERADORBOOL  go to state 68
    CONDAUX       go to state 118


State 105

   36 PARAMETROS: COMA ID . PARAMETROS

    COMA  shift, and go to state 74

    $default  reduce using rule 34 (PARAMETROS)

    PARAMETROS  go to state 119


State 106

   35 PARAMETROS: COMA VARIABLE . ID PARAMETROS

    ID  shift, and go to state 120


State 107

   21 FUNCIONES: ID PARENTESISIZ ID PARAMETROS PARENTESISDER . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 121


State 108

   45 EXPARIT: ID OPERACION EXPARIT .

    $default  reduce using rule 45 (EXPARIT)


State 109

   44 EXPARIT: NUMERO OPERACION EXPARIT .

    $default  reduce using rule 44 (EXPARIT)


State 110

   17 LIBS: GATO INCLUDE MENORQUE ID MAYORQUE .

    $default  reduce using rule 17 (LIBS)


State 111

   20 FUNCIONES: VARIABLE ID PARENTESISIZ VARIABLE ID . PARAMETROS PARENTESISDER

    COMA  shift, and go to state 74

    $default  reduce using rule 34 (PARAMETROS)

    PARAMETROS  go to state 122


State 112

   38 VAR: COMA ID VAR .

    $default  reduce using rule 38 (VAR)


State 113

   23 DECLARACION: VARIABLE BRACKETIZ BRACKETDER ID VAR . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 123


State 114

   69 IFYCICLO: FOR PARENTESISIZ INT ID IGUAL ENTERO . PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    PUNTOCOMA  shift, and go to state 124


State 115

   62 CONDICION: ID CONDICIONES ID CONDAUX .

    $default  reduce using rule 62 (CONDICION)


State 116

   61 CONDICION: ID CONDICIONES NUMERO CONDAUX .

    $default  reduce using rule 61 (CONDICION)


State 117

   64 CONDICION: NUMERO CONDICIONES ID CONDAUX .

    $default  reduce using rule 64 (CONDICION)


State 118

   63 CONDICION: NUMERO CONDICIONES NUMERO CONDAUX .

    $default  reduce using rule 63 (CONDICION)


State 119

   36 PARAMETROS: COMA ID PARAMETROS .

    $default  reduce using rule 36 (PARAMETROS)


State 120

   35 PARAMETROS: COMA VARIABLE ID . PARAMETROS

    COMA  shift, and go to state 74

    $default  reduce using rule 34 (PARAMETROS)

    PARAMETROS  go to state 125


State 121

   21 FUNCIONES: ID PARENTESISIZ ID PARAMETROS PARENTESISDER PUNTOCOMA .

    $default  reduce using rule 21 (FUNCIONES)


State 122

   20 FUNCIONES: VARIABLE ID PARENTESISIZ VARIABLE ID PARAMETROS . PARENTESISDER

    PARENTESISDER  shift, and go to state 126


State 123

   23 DECLARACION: VARIABLE BRACKETIZ BRACKETDER ID VAR PUNTOCOMA .

    $default  reduce using rule 23 (DECLARACION)


State 124

   69 IFYCICLO: FOR PARENTESISIZ INT ID IGUAL ENTERO PUNTOCOMA . CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    ID           shift, and go to state 35
    ENTERO       shift, and go to state 36
    DECIMAL      shift, and go to state 37
    EXCLAMACION  shift, and go to state 38

    $default  reduce using rule 48 (NUMERO)

    NUMERO     go to state 39
    CONDICION  go to state 127


State 125

   35 PARAMETROS: COMA VARIABLE ID PARAMETROS .

    $default  reduce using rule 35 (PARAMETROS)


State 126

   20 FUNCIONES: VARIABLE ID PARENTESISIZ VARIABLE ID PARAMETROS PARENTESISDER .

    $default  reduce using rule 20 (FUNCIONES)


State 127
